# InteractiveComputerGraphicsHW

./: .gitignore  LICENSE  README.md
bh_a1/: Makefile  README  red_triangle.cpp
bh_a1/include/: Geometry.h
bh_a2/: Makefile  README  main.cpp  part2.cpp  red_triangle.cpp
bh_a2/Common/: InitShader.cpp
bh_a3/src/: Makefile  main.cpp
bh_a3/src/include/: Geometry.h
bh_a3/src/shader/: fshader21.glsl  vshader21.glsl
bh_a4/src/: CMakeLists.txt  InitShader.cpp  Makefile  README  main.cpp
bh_a4/src/include/: BoxGeometry.h  main.h
bh_a4/src/shader/: fshader21.glsl  vshader21.glsl
bh_a5/src/: CMakeLists.txt  Makefile  Plane.cpp  README  loadSMF.cpp  main.cpp
bh_a5/src/include/: Camera.h  main.h
bh_a5/src/shader/: vshader21.glsl
bh_a6/src/: CMakeLists.txt  loadSMF.cpp  main.cpp
bh_a6/src/include/: Camera.h  Plane.h  main.h
bh_a6/src/shader/: fshader21.glsl  vshader21.glsl
bh_a7/src/: CMakeLists.txt  README  loadSMF.cpp  main.cpp
bh_a7/src/include/: Plane.h  main.h  mat.h
bh_a7/src/shader/: vLineShader.glsl
bh_a8/src/: CMakeLists.txt  main.cpp
bh_a8/src/include/: Camera.h  MeshObject.h  main.h
bh_a8/src/shader/: fPolygonShader.glsl
bh_a9/src/: CMakeLists.txt  loadSMF.cpp  main.cpp
bh_a9/src/include/: MeshObject.h  main.h
bh_a9/src/resources/: bezier_control_points.txt
bh_a9/src/shader/: fLineShader.glsl  vPolygonShader.glsl
bh_a9a/src/: InitShader.cpp  Plane.cpp  README  README.md  loadSMF.cpp  main.cpp
bh_a9a/src/include/: MeshObject.h  Scene.h  main.h
bh_a9a/src/shader/: fPolygonShader.glsl
bh_a9b/src/: CMakeLists.txt  README  loadSMF.cpp  main.cpp
bh_a9b/src/include/: BoxGeometry.h  Camera.h  MeshObject.h  main.h
bh_a9b/src/resources/: cube.smf
bh_a9b/src/shader/: fPolygonShader.glsl  fPolygonShader_linux.glsl  vPickingShader.glsl  vPolygonShader.glsl
bh_final_project/src/: CMakeLists.txt  README.md  loadSMF.cpp  main.cpp
bh_final_project/src/include/: Camera.h  MeshObject.h  Scene.h  main.h
bh_final_project/src/shader/: fPolygonShader.glsl  fPolygonShader_linux.glsl  vLineShader.glsl  vPolygonShader.glsl
